--- a/DemoEKZA/DemoEKZA.csproj
+++ b/DemoEKZA/DemoEKZA.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
@@ -71,6 +72,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ClassFolder\CaptchaGenerator.cs" />
     <Compile Include="ClassFolder\MBClass.cs" />
     <Compile Include="DataFolder\Event.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -119,6 +121,9 @@
     </Compile>
     <Compile Include="WindowFolder\AutorisationWindow.xaml.cs">
       <DependentUpon>AutorisationWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WindowFolder\EventInfo.xaml.cs">
+      <DependentUpon>EventInfo.xaml</DependentUpon>
     </Compile>
     <Compile Include="WindowFolder\EventList.xaml.cs">
       <DependentUpon>EventList.xaml</DependentUpon>
@@ -186,6 +191,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="WindowFolder\AutorisationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowFolder\EventInfo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
