--- a/DemoEKZA/DemoEKZA.csproj
+++ b/DemoEKZA/DemoEKZA.csproj
@@ -113,6 +113,9 @@
     <Compile Include="DataFolder\User.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="WindowFolder\AddIvent.xaml.cs">
+      <DependentUpon>AddIvent.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WindowFolder\AddModer.xaml.cs">
       <DependentUpon>AddModer.xaml</DependentUpon>
     </Compile>
@@ -122,14 +125,20 @@
     <Compile Include="WindowFolder\AutorisationWindow.xaml.cs">
       <DependentUpon>AutorisationWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WindowFolder\EventInfo.xaml.cs">
-      <DependentUpon>EventInfo.xaml</DependentUpon>
+    <Compile Include="WindowFolder\EventInfoWindow.xaml.cs">
+      <DependentUpon>EventInfoWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="WindowFolder\EventList.xaml.cs">
       <DependentUpon>EventList.xaml</DependentUpon>
     </Compile>
     <Compile Include="WindowFolder\ModerWindow.xaml.cs">
       <DependentUpon>ModerWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WindowFolder\OrganisatorWindow.xaml.cs">
+      <DependentUpon>OrganisatorWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WindowFolder\ProfileWindow.xaml.cs">
+      <DependentUpon>ProfileWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="WindowFolder\RegestrationWindow.xaml.cs">
       <DependentUpon>RegestrationWindow.xaml</DependentUpon>
@@ -182,6 +191,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="WindowFolder\AddIvent.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WindowFolder\AddModer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -194,7 +207,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WindowFolder\EventInfo.xaml">
+    <Page Include="WindowFolder\EventInfoWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -203,6 +216,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="WindowFolder\ModerWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowFolder\OrganisatorWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowFolder\ProfileWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
